tests/baselines/reference/ES5SymbolProperty7(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
ES5SymbolProperty7.ts(1,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'Symbol' must be of type 'SymbolConstructor', but here has type '{ iterator: any; }'.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== ES5SymbolProperty7.ts (1 errors) ====
    var Symbol: { iterator: any };
        ~~~~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'Symbol' must be of type 'SymbolConstructor', but here has type '{ iterator: any; }'.
!!! related TS6203 lib.es2015.symbol.d.ts:--:--: 'Symbol' was also declared here.
    
    class C {
        [Symbol.iterator]() { }
    }
    
    (new C)[Symbol.iterator]